--- a/Cliente - Android/BoaTrip/app/src/main/AndroidManifest.xml
+++ b/Cliente - Android/BoaTrip/app/src/main/AndroidManifest.xml
@@ -4,11 +4,11 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/ic_boatrip_logo"
         android:label="@string/app_name"
         android:theme="@style/Theme.MyTheme" >
         <activity
-            android:name=".MainActivity"
+            android:name=".Activitys.BaseActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
