--- a/Cliente - Android/BoaTrip/app/src/main/AndroidManifest.xml
+++ b/Cliente - Android/BoaTrip/app/src/main/AndroidManifest.xml
@@ -8,13 +8,29 @@
         android:label="@string/app_name"
         android:theme="@style/Theme.MyTheme" >
         <activity
-            android:name=".Activitys.BaseActivity"
+            android:name=".Activitys.BuscaActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".Activitys.BaseNavegationDrawerActivity"
+            android:label="@string/title_activity_base" >
+        </activity>
+        <activity
+            android:name=".Activitys.BaseInternalActivity"
+            android:label="@string/title_activity_base_internal" >
+        </activity>
+        <activity
+            android:name=".Activitys.BuscaOrigemActivity"
+            android:label="@string/title_activity_busca_origem" >
+        </activity>
+        <activity
+            android:name=".Activitys.BuscaDestinoActivity"
+            android:label="@string/title_activity_busca_destino" >
         </activity>
     </application>
 
