--- a/Cliente - Android/BoaTrip/app/build.gradle
+++ b/Cliente - Android/BoaTrip/app/build.gradle
@@ -25,5 +25,5 @@ dependencies {
     compile('com.mikepenz:materialdrawer:3.0.9@aar') {
         transitive = true
     }
-    compile 'com.mcxiaoke.volley:library:1.0.17'
+    compile 'com.mcxiaoke.volley:library:1.0.+'
 }
