--- a/Cliente - Android/BoaTrip/app/src/main/AndroidManifest.xml
+++ b/Cliente - Android/BoaTrip/app/src/main/AndroidManifest.xml
@@ -1,15 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.mhcabral.boatrip" >
-
+    <uses-permission android:name="android.permission.INTERNET" />
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_boatrip_logo"
         android:label="@string/app_name"
         android:theme="@style/Theme.MyTheme" >
         <activity
-            android:name=".Activitys.BuscaActivity"
-            android:label="@string/app_name" >
+            android:name=".Activitys.InicialActivity"
+            android:label="@string/app_name"
+            android:configChanges="keyboard|keyboardHidden|orientation|screenSize">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -31,6 +32,10 @@
         <activity
             android:name=".Activitys.BuscaDestinoActivity"
             android:label="@string/title_activity_busca_destino" >
+        </activity>
+        <activity
+            android:name=".Activitys.BuscaActivity"
+            android:label="@string/title_activity_inicial">
         </activity>
     </application>
 
