--- a/Cliente - Android/BoaTrip/app/build.gradle
+++ b/Cliente - Android/BoaTrip/app/build.gradle
@@ -26,4 +26,5 @@ dependencies {
         transitive = true
     }
     compile 'com.mcxiaoke.volley:library:1.0.17'
+    compile 'com.android.support:recyclerview-v7:21.0.+'
 }
